# AppCUI-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gallery.md  README.md  a  a.py  book.toml  default_4520339130095285207_0_6256.profraw  default_4521001062946091991_0_19864.profraw  default_4521001062946091991_0_63632.profraw  status_code_coverage.py
appcui/: Cargo.toml  build.rs  events.txt
appcui-proc-macro/: Cargo.toml
appcui-proc-macro/src/: appcui_traits.rs  arguments.rs  char_utils.rs  chars.rs  column.rs  controls.rs  derives.rs  key.rs  key_utils.rs  lib.rs  menu.rs  parameter_parser.rs  procmacro_builder.rs  templates.rs  token_stream_to_string.rs  traits_configuration.rs  utils.rs
appcui-proc-macro/src/chars/: builder.rs  special_chars.rs
appcui-proc-macro/src/column/: builder.rs  text_alignament.rs  text_alignment.rs
appcui-proc-macro/src/controls/: accordion.rs  button.rs  canvas.rs  charpicker.rs  checkbox.rs  colorpicker.rs  combobox.rs  common.rs  control_builder.rs  date_picker.rs  datepicker.rs  dropdownlist.rs  flags_signature.rs  graphview.rs  hline.rs  hnumericslider.rs  hsplitter.rs  imageviewer.rs  keyselector.rs  label.rs  layout.rs  listbox.rs  listview.rs  markdown.rs  numericselector.rs  panel.rs  password.rs  pathfinder.rs  progressbar.rs  radiobox.rs  richtextfield.rs  selector.rs  tab.rs  textarea.rs  textfield.rs  threestatebox.rs  timepicker.rs  togglebutton.rs  toolbaritem.rs  treeview.rs  (+4 more)
appcui-proc-macro/tests/: test_macro.rs
appcui/src/: backend.rs  controls.rs  dialogs.rs  graphics.rs  input.rs  lib.rs  prelude.rs  system.rs  terminal.rs  terminals.rs  ui.rs  utils.rs
appcui/tests/: test.rs
examples/: Cargo.toml  SimpleWindow.rs  buttons.rs  canvas.rs  change_menu_status.rs  checkboxes.rs  dev_test.rs  exemple.md  hello_world.rs  modal_window.rs  simple_window.rs  test.rs  window_toolbar.rs
examples/accordion/: main.rs
examples/appbar/: aligned_menus.rs  disabled_menu.rs  main.rs  navigation.rs  progress_bar.rs  regular_menus.rs  simple_menu.rs  switch_buttons.rs  toggle_buttons.rs
examples/appbar_desktop/: main.rs
examples/background_task/: main.rs
examples/basic_controls/: main.rs
examples/buttons/: main.rs
examples/calculator/: expression_parser.rs  main.rs
examples/canvas/: main.rs
examples/change_menu_status/: main.rs
examples/char_format/: main.rs
examples/charpicker/: main.rs
examples/checkboxes/: main.rs
examples/checkboxes_types/: main.rs
examples/colorpicker/: main.rs
examples/combobox/: main.rs
examples/counter/: main.rs
examples/csv_viewer/: csv.rs  main.rs  my_desktop.rs  viewer.rs
examples/custom_desktop/: main.rs
examples/date_picker/: main.rs
examples/datepicker/: main.rs
examples/demo_app/: animation.rs  base_controls.rs  color_palette.rs  file_navigator.rs  image_win.rs  index.html  main.js  main.rs  server.py  tree_example.rs
examples/demo_app_web/: README.md  animation.rs  lib.rs  matrix_column.rs  matrix_win.rs  timer_example.rs
examples/dropdownlist/: main.rs  mathop.rs
examples/editor/: main.rs  my_desktop.rs  viewer.rs
examples/emoticons/: main.rs
examples/ferris/: main.rs
examples/flappy/: flappy_game.rs  main.rs  mywin.rs
examples/fractals/: fractal.rs  main.rs
examples/games/: chess.rs  connect_four.rs  game_2048.rs  main.rs  pacman.rs  tetris.rs
examples/globe/: globe.rs  main.rs
examples/graph_editor/: main.rs
examples/graphs/: bipartite.rs  circular.rs  graph_window.rs  main.rs  settings.rs  showcase.rs  tree.rs
examples/hello_world/: main.rs
examples/hello_world_procmacro/: main.rs
examples/hline/: main.rs
examples/images/: dizzy.rs  hello_rust.rs  main.rs  mydesktop.rs  mywin.rs  shapes.rs
examples/input_dialog/: main.rs
examples/keyselector/: main.rs
examples/layout_tester/: child_control.rs  main.rs  parent_control.rs  value.rs
examples/listbox/: main.rs
examples/listview/: animals.rs  countries.rs  custom_filter.rs  custom_paint.rs  files.rs  greek_letters.rs  main.rs  music.rs  planets.rs  salaries.rs  tasks.rs  words.rs
examples/logo/: main.rs
examples/markdown/: main.rs  markdown_navigator.rs  md_loader.rs  my_desktop.rs  viewer.rs
examples/matrix/: main.rs  matrix_column.rs
examples/menus/: main.rs
examples/minesweeper/: main.rs  minesweeper_game.rs  mywin.rs
examples/modal_window/: main.rs
examples/multiple_menus/: color_custom_control.rs  main.rs  my_window.rs  text_custom_control.rs
examples/notification_dialogs/: main.rs
examples/painter/: main.rs  painter_control.rs  painter_window.rs
examples/panels_3d/: main.rs
examples/password/: main.rs
examples/popup_menu/: main.rs  my_custom_control.rs  my_window.rs
examples/radioboxes/: main.rs
examples/radioboxes_types/: main.rs
examples/ramit/: main.rs  mywin.rs  ramit_game.rs
examples/richtextfield/: main.rs
examples/select_folder/: main.rs
examples/selector/: main.rs  shape.rs
examples/single_window/: main.rs
examples/sixel_demo/: main.rs
examples/sixel_web/: Cargo.toml  index.html  main.js  server.py
examples/snake/: main.rs  mywin.rs  snake_game.rs
examples/spiral/: main.rs  spiral.rs
examples/splitter/: ferris.rs  main.rs
examples/surface_load_web/: Cargo.toml  README.md  build.rs  index.html  main.js  server.py
examples/surface_serialization/: main.rs  output.srf  raw.txt
examples/tab/: main.rs  my_window.rs  show_tab_modal.rs
examples/temperature_convertor/: main.rs
examples/textarea/: my_desktop.rs  viewer.rs
examples/textfield/: main.rs
examples/theme_switcher/: main.rs
examples/threestatebox_types/: main.rs
examples/tic-tac-toe/: board.rs  main.rs  my_win.rs
examples/timepicker/: main.rs
examples/timer/: digits.rs  main.rs
examples/treeview/: main.rs
examples/true_colors/: main.rs
examples/vline/: main.rs
examples/window_toolbar/: main.rs
examples/window_toolbar_button/: main.rs
examples/window_toolbar_checkbox/: main.rs
examples/window_toolbar_label/: main.rs
examples/window_toolbar_single_choice/: main.rs
examples/window_type/: main.rs
src/: input.rs  (+3 more)
(+1026 files in other folders)
