[package]
name = "appcui_proc_macro"
version = "0.1.6"
edition = "2021"
authors = ["Gavrilut Dragos <gavrilut.dragos@gmail.com>"]
description = "Procedural macros for the AppCUI TUI framework."
license = "MIT"
repository = "https://github.com/gdt050579/AppCUI-rs"
readme = "../README.md"
keywords = ["tui", "cui", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/appcui-proc-macro"

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true