[package]
name = "appcui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
EnumBitFlags = "1.0.10"
flat_string = "1.0.0"
chrono = "0.4.38"
appcui_proc_macro = {path = "../appcui-proc-macro"}

[target.'cfg(target_os = "linux")'.dependencies]
copypasta = "0.10.1"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[features]
default = []
DEBUG_SHOW_WINDOW_TITLE_BOUNDERIES = []
EVENT_RECORDER = []
GLOBAL_RUNTIME = []

[lints]
workspace = true
