[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
appcui = { version = "1.0.0", path = "../appcui" }
AppCUIProcMacro = { version = "1.0.0", path = "../appcui-proc-macro"}


[[example]]
name = "test"
path = "dev_test.rs"



[[example]]
name = "buttons"
path = "buttons/main.rs"

[[example]]
name = "canvas"
path = "canvas/main.rs"

[[example]]
name = "checkboxes"
path = "checkboxes/main.rs"

[[example]]
name = "radioboxes"
path = "radioboxes/main.rs"

[[example]]
name = "colorpicker"
path = "colorpicker/main.rs"

[[example]]
name = "hello_world"
path = "hello_world/main.rs"

[[example]]
name = "window_toolbar"
path = "window_toolbar/main.rs"

[[example]]
name = "modal_window"
path = "modal_window/main.rs"

[[example]]
name = "change_menu_status"
path = "change_menu_status/main.rs"

[[example]]
name = "multiple_menus"
path = "multiple_menus/main.rs"

[[example]]
name = "popup_menu"
path = "popup_menu/main.rs"

[[example]]
name = "menus"
path = "menus/main.rs"

[[example]]
name = "password"
path = "password/main.rs"

[[example]]
name = "notification_dialogs"
path = "notification_dialogs/main.rs"

[[example]]
name = "tab"
path = "tab/main.rs"

[[example]]
name = "accordion"
path = "accordion/main.rs"

[[example]]
name = "keyselector"
path = "keyselector/main.rs"

[[example]]
name = "textfield"
path = "textfield/main.rs"

[[example]]
name = "custom_desktop"
path = "custom_desktop/main.rs"

[[example]]
name = "single_window"
path = "single_window/main.rs"

[[example]]
name = "tic-tac-toe"
path = "tic-tac-toe/main.rs"