[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
appcui = { path = "../appcui" }
appcui_proc_macro = { path = "../appcui-proc-macro"}
chrono = "0.4.38"


[[example]]
name = "test"
path = "dev_test.rs"



[[example]]
name = "buttons"
path = "buttons/main.rs"

[[example]]
name = "canvas"
path = "canvas/main.rs"

[[example]]
name = "checkboxes"
path = "checkboxes/main.rs"

[[example]]
name = "radioboxes"
path = "radioboxes/main.rs"

[[example]]
name = "colorpicker"
path = "colorpicker/main.rs"

[[example]]
name = "hello_world"
path = "hello_world/main.rs"

[[example]]
name = "window_toolbar"
path = "window_toolbar/main.rs"

[[example]]
name = "modal_window"
path = "modal_window/main.rs"

[[example]]
name = "change_menu_status"
path = "change_menu_status/main.rs"

[[example]]
name = "multiple_menus"
path = "multiple_menus/main.rs"

[[example]]
name = "popup_menu"
path = "popup_menu/main.rs"

[[example]]
name = "menus"
path = "menus/main.rs"

[[example]]
name = "password"
path = "password/main.rs"

[[example]]
name = "markdown"
path = "markdown/main.rs"

[[example]]
name = "notification_dialogs"
path = "notification_dialogs/main.rs"

[[example]]
name = "tab"
path = "tab/main.rs"

[[example]]
name = "accordion"
path = "accordion/main.rs"

[[example]]
name = "keyselector"
path = "keyselector/main.rs"

[[example]]
name = "textfield"
path = "textfield/main.rs"

[[example]]
name = "custom_desktop"
path = "custom_desktop/main.rs"

[[example]]
name = "single_window"
path = "single_window/main.rs"

[[example]]
name = "tic-tac-toe"
path = "tic-tac-toe/main.rs"

[[example]]
name = "images"
path = "images/main.rs"

[[example]]
name = "ferris"
path = "ferris/main.rs"

[[example]]
name = "selector"
path = "selector/main.rs"

[[example]]
name = "combobox"
path = "combobox/main.rs"

[[example]]
name = "dropdownlist"
path = "dropdownlist/main.rs"

[[example]]
name = "temperature_convertor"
path = "temperature_convertor/main.rs"

[[example]]
name = "hline"
path = "hline/main.rs"

[[example]]
name = "vline"
path = "vline/main.rs"

[[example]]
name = "datepicker"
path = "datepicker/main.rs"

[[example]]
name = "splitter"
path = "splitter/main.rs"

[[example]]
name = "listbox"
path = "listbox/main.rs"

[[example]]
name = "listview"
path = "listview/main.rs"

[[example]]
name = "csv_viewer"
path = "csv_viewer/main.rs"

[[example]]
name = "calculator"
path = "calculator/main.rs"

[[example]]
name = "theme_switcher"
path = "theme_switcher/main.rs"

[[example]]
name = "timer"
path = "timer/main.rs"

[[example]]
name = "treeview"
path = "treeview/main.rs"

[[example]]
name = "background_task"
path = "background_task/main.rs"

[[example]]
name = "logo"
path = "logo/main.rs"

[[example]]
name = "demo_app"
path = "demo_app/main.rs"