[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
appcui = { path = "../appcui", features = ["TRUE_COLORS"] }
appcui_proc_macro = { path = "../appcui-proc-macro"}
chrono = "0.4.38"
rand = "0.8.5"
tempfile = "3.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "KeyboardEvent",
    "WheelEvent",
    "Worker", 
    "WebGlUniformLocation",
    "Window", 
    "Document", 
    "DomRect",
    "Navigator",
    "Clipboard",
    "HtmlCanvasElement", 
    "HtmlElement",
    "CssStyleDeclaration", 
    "WebGlRenderingContext", 
    "WebGl2RenderingContext",
    "WebGlBuffer", 
    "WebGlProgram", 
    "WebGlShader", 
    "WebGlTexture", 
    "MouseEvent", 
    "console", 
    "CanvasRenderingContext2d",
    "TextMetrics"]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-time = {version = "1.1.0"}
rand = {version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
rayon = {version = "1.5", features = ["web_spin_lock"]}
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"

[[example]]
name = "test"
path = "dev_test.rs"


[[example]]
name = "buttons"
path = "buttons/main.rs"

[[example]]
name = "canvas"
path = "canvas/main.rs"

[[example]]
name = "char_format"
path = "char_format/main.rs"

[[example]]
name = "checkboxes"
path = "checkboxes/main.rs"

[[example]]
name = "checkboxes_types"
path = "checkboxes_types/main.rs"

[[example]]
name = "radioboxes"
path = "radioboxes/main.rs"

[[example]]
name = "radioboxes_types"
path = "radioboxes_types/main.rs"

[[example]]
name = "colorpicker"
path = "colorpicker/main.rs"

[[example]]
name = "hello_world"
path = "hello_world/main.rs"

[[example]]
name = "hello_world_procmacro"
path = "hello_world_procmacro/main.rs"

[[example]]
name = "window_toolbar"
path = "window_toolbar/main.rs"

[[example]]
name = "modal_window"
path = "modal_window/main.rs"

[[example]]
name = "change_menu_status"
path = "change_menu_status/main.rs"

[[example]]
name = "multiple_menus"
path = "multiple_menus/main.rs"

[[example]]
name = "popup_menu"
path = "popup_menu/main.rs"

[[example]]
name = "menus"
path = "menus/main.rs"

[[example]]
name = "password"
path = "password/main.rs"

[[example]]
name = "markdown"
path = "markdown/main.rs"

[[example]]
name = "notification_dialogs"
path = "notification_dialogs/main.rs"

[[example]]
name = "tab"
path = "tab/main.rs"

[[example]]
name = "accordion"
path = "accordion/main.rs"

[[example]]
name = "keyselector"
path = "keyselector/main.rs"

[[example]]
name = "textfield"
path = "textfield/main.rs"

[[example]]
name = "custom_desktop"
path = "custom_desktop/main.rs"

[[example]]
name = "single_window"
path = "single_window/main.rs"

[[example]]
name = "tic-tac-toe"
path = "tic-tac-toe/main.rs"

[[example]]
name = "images"
path = "images/main.rs"

[[example]]
name = "ferris"
path = "ferris/main.rs"

[[example]]
name = "selector"
path = "selector/main.rs"

[[example]]
name = "combobox"
path = "combobox/main.rs"

[[example]]
name = "dropdownlist"
path = "dropdownlist/main.rs"

[[example]]
name = "temperature_convertor"
path = "temperature_convertor/main.rs"

[[example]]
name = "hline"
path = "hline/main.rs"

[[example]]
name = "vline"
path = "vline/main.rs"

[[example]]
name = "datepicker"
path = "datepicker/main.rs"

[[example]]
name = "splitter"
path = "splitter/main.rs"

[[example]]
name = "listbox"
path = "listbox/main.rs"

[[example]]
name = "listview"
path = "listview/main.rs"

[[example]]
name = "csv_viewer"
path = "csv_viewer/main.rs"

[[example]]
name = "calculator"
path = "calculator/main.rs"

[[example]]
name = "theme_switcher"
path = "theme_switcher/main.rs"

[[example]]
name = "timer"
path = "timer/main.rs"

[[example]]
name = "treeview"
path = "treeview/main.rs"

[[example]]
name = "background_task"
path = "background_task/main.rs"

[[example]]
name = "logo"
path = "logo/main.rs"

[[example]]
name = "demo_app"
path = "demo_app/main.rs"

[[example]]
name = "editor"
path = "editor/main.rs"

[[example]]
name = "painter"
path = "painter/main.rs"

[[example]]
name = "snake"
path = "snake/main.rs"

[[example]]
name = "matrix"
path = "matrix/main.rs"

[[example]]
name = "fractals"
path = "fractals/main.rs"

[[example]]
name = "spiral"
path = "spiral/main.rs"

[[example]]
name = "counter"
path = "counter/main.rs"

[[example]]
name = "window_toolbar_button"
path = "window_toolbar_button/main.rs"

[[example]]
name = "window_toolbar_checkbox"
path = "window_toolbar_checkbox/main.rs"

[[example]]
name = "window_toolbar_label"
path = "window_toolbar_label/main.rs"

[[example]]
name = "window_toolbar_single_choice"
path = "window_toolbar_single_choice/main.rs"


[[example]]
name = "threestatebox_types"
path = "threestatebox_types/main.rs"

[[example]]
name = "ramit"
path = "ramit/main.rs"

[[example]]
name = "minesweeper"
path = "minesweeper/main.rs"

[[example]]
name = "flappy"
path = "flappy/main.rs"

[[example]]
name = "true_colors"
path = "true_colors/main.rs"

[[example]]
name = "emoticons"
path = "emoticons/main.rs"

[[example]]
name = "surface_serialization"
path = "surface_serialization/main.rs"

[[example]]
name = "input_dialog"
path = "input_dialog/main.rs"
